* Console:       - Move the console css from default.css in the .war to docs/themes/console/console.css,         and support console themes in the main console with routerconsole.theme=foo
Monotone-Parent: b74933079f75fac2e73b3efe7dcfa485320bafa4
Monotone-Revision: 0b91b687479e8c08cecdab1c6aab1fe7474413e8

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-11T18:05:05

--- a/build.xml
+++ b/build.xml
@@ -371,6 +371,9 @@
         <copy file="build/addressbook.war" todir="pkg-temp/webapps/" />
         <!-- New readme_*.html files - For one release only -->
         <copy file="readme_zh.html" todir="pkg-temp/docs/" />
+        <!-- CSS now in docs/, not in the .war -->
+        <copy file="apps/routerconsole/jsp/default.css" tofile="pkg-temp/docs/themes/console/console.css" />
+        <copy file="apps/routerconsole/jsp/default.css" tofile="pkg-temp/docs/themes/console/defCon1/console.css" />
     </target>
     <target name="prepupdateRouter" depends="buildrouter, deletepkg-temp">
         <copy file="build/i2p.jar" todir="pkg-temp/lib/" />
