* Installer:       - Change the wrapper.config classpath to one line: lib/*.jar         This means we lose control of classpath load order, so move the windows installer         jars copy.jar, delete.jar, and exec.jar to a new installer/ directory so         these jars won't be in the classpath or potentially conflict, since         copy.jar and delete.jar include FileUtil.class, and we don't want to have         to remember to add them to the updater if we ever change FileUtil.class.         Delete the installer/ directory in postinstall.sh since it is windows-only.
Monotone-Parent: 0b91b687479e8c08cecdab1c6aab1fe7474413e8
Monotone-Revision: 4db740bbab60c0089587b275a0eaae718987f0e9

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-11T23:38:15

--- a/build.xml
+++ b/build.xml
@@ -399,13 +399,14 @@
     </target>
     <target name="installer" depends="preppkg">
         <taskdef name="izpack" classpath="${basedir}/installer/lib/izpack/standalone-compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
-        <jar destfile="./pkg-temp/lib/copy.jar" basedir="./core/java/build/obj" includes="net/i2p/util/Copy.class net/i2p/util/FileUtil.class">
+        <mkdir dir="pkg-temp/installer" />
+        <jar destfile="./pkg-temp/installer/copy.jar" basedir="./core/java/build/obj" includes="net/i2p/util/Copy.class net/i2p/util/FileUtil.class">
             <manifest><attribute name="Main-Class" value="net.i2p.util.Copy" /></manifest>
         </jar>
-        <jar destfile="./pkg-temp/lib/delete.jar" basedir="./core/java/build/obj" includes="net/i2p/util/Delete.class net/i2p/util/FileUtil.class">
+        <jar destfile="./pkg-temp/installer/delete.jar" basedir="./core/java/build/obj" includes="net/i2p/util/Delete.class net/i2p/util/FileUtil.class">
             <manifest><attribute name="Main-Class" value="net.i2p.util.Delete" /></manifest>
         </jar>
-        <jar destfile="./pkg-temp/lib/exec.jar" basedir="./core/java/build/obj" includes="net/i2p/util/Exec.class">
+        <jar destfile="./pkg-temp/installer/exec.jar" basedir="./core/java/build/obj" includes="net/i2p/util/Exec.class">
             <manifest><attribute name="Main-Class" value="net.i2p.util.Exec" /></manifest>
         </jar>
         <izpack input="${basedir}/installer/install.xml" output="${basedir}/install.jar" installerType="standard" basedir="${basedir}" />
