* Installer:       - Add install and temp path substitution to wrapper.config and         i2prouter on install
Monotone-Parent: 4db740bbab60c0089587b275a0eaae718987f0e9
Monotone-Revision: 1d4b529f1b52692195f1547338e186819dbd0cab

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-12T12:23:25

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -11,6 +11,12 @@
 # with the runplain.sh script on Linux. Use the 'restartable'
 # icon on Windows or the i2prouter script on Linux to run the wrapper.
 #
+# NOTE - The izpack installer performs variable subsitiution on this
+# file upon installation. If you did not use izpack, you must
+# find and replace all instances of (dollar)INSTALL_PATH and
+# (dollar)SYSTEM_java_io_tmpdir with appropriate values
+# (perhaps . and /var/tmp, respectively)
+#
 #********************************************************************
 # Java Application
 wrapper.java.command=java
@@ -32,13 +38,13 @@ wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperSimpleApp
 # classes, or all the classes of i2p.jar, are in a different directory).
 # Be sure there are no other duplicate classes.
 #
-wrapper.java.classpath.1=lib/*.jar
+wrapper.java.classpath.1=$INSTALL_PATH/lib/*.jar
 #  uncomment this to use the system classpath as well (e.g. to get tools.jar)
 # wrapper.java.classpath.2=%CLASSPATH%
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
-wrapper.java.library.path.1=.
-wrapper.java.library.path.2=lib
+wrapper.java.library.path.1=$INSTALL_PATH
+wrapper.java.library.path.2=$INSTALL_PATH/lib
 
 # Java Additional Parameters
 wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
@@ -131,7 +137,11 @@ wrapper.ping.timeout=605
 wrapper.use_system_time=false
 
 # pid file for the JVM
-wrapper.java.pidfile=routerjvm.pid
+# If you plan to have multiple wrappers running on the same machine,
+# you should copy this file, change the location or file name,
+# and edit the i2prouter script to change the WRAPPER_CONF setting
+# to point to the new wrapper.config location.
+wrapper.java.pidfile=$SYSTEM_java_io_tmpdir/routerjvm.pid
 # pid file for the service monitoring the JVM
 #
 # From i2prouter:
@@ -141,7 +151,8 @@ wrapper.java.pidfile=routerjvm.pid
 #     PIDFILE="$PIDDIR/$APP_NAME.pid"
 #
 # This means i2prouter looks for './i2p.pid'.
-wrapper.pidfile=i2p.pid
+# See comments above for wrapper.java.pidfile
+wrapper.pidfile=$SYSTEM_java_io_tmpdir/i2p.pid
 
 #********************************************************************
 # Wrapper NT Service Properties
