back to updaterWithJettyFixes
Monotone-Parent: 1d4b529f1b52692195f1547338e186819dbd0cab
Monotone-Revision: 463c4298ef56b62abdd430301e78a5be7f0488c0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-13T13:24:03

--- a/build.xml
+++ b/build.xml
@@ -202,8 +202,7 @@
             <fileset dir="." includes="**/*.java~" />
         </delete>
     </target>
-    <!-- one release only, then back to updaterWithJettyFixes -->
-    <target name="pkg" depends="distclean, updaterWithJettyFixesAndGeoIP, preppkg, installer" />
+    <target name="pkg" depends="distclean, updaterWithJettyFixes, preppkg, installer" />
     <target name="pkgclean" depends="deletepkg-temp">
         <delete>
             <fileset dir="." includes="i2p.tar.bz2 install.jar i2pupdate.zip" />
