* i2prouter:       - Don't cd to script location, no longer required     * RouterLaunch:       - If no wrapper, put wrapper.log in system temp dir         unless specified with -Dwrapper.logfile=/path/to/wrapper.log         or it already exists in CWD (for backward compatibility)       - Append rather than replace wrapper.log       - Pass wrapper log location to router as a property, so that logs.jsp can find it     * logs.jsp:       - Get wrapper log location from a property too     * runplain.sh:       - Add path substitution to runplain.sh on install       - Pass I2P base dir to the router as a property     * wrapper.config:       - Put wrapper.log in system temp dir for new installs       - Pass I2P base dir to the router as a property     * WorkingDir:       - Don't migrate an existing install by default       - Never migrate the data (too hard)
Monotone-Parent: d60977669b38764303715d62002d7fed9bdfd788
Monotone-Revision: 005718b7308297b1e3e6f319a947ba715328948c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-13T21:04:27

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -51,11 +51,12 @@ wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
 wrapper.java.additional.2=-Dorg.mortbay.http.Version.paranoid=true
 wrapper.java.additional.3=-Dorg.mortbay.util.FileResource.checkAliases=false
 wrapper.java.additional.4=-Dorg.mortbay.xml.XmlParser.NotValidating=true
+wrapper.java.additional.5=-Di2p.dir.base=$INSTALL_PATH
 # Uncomment this for better performance.
 # If it doesn't work, server mode is not available in your JVM.
 # This may not be required if your machine is already "server-class".
 # See http://java.sun.com/j2se/1.5.0/docs/guide/vm/server-class.html
-#wrapper.java.additional.5=-server
+#wrapper.java.additional.6=-server
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=4
@@ -86,7 +87,13 @@ wrapper.console.format=PM
 wrapper.console.loglevel=INFO
 
 # Log file to use for wrapper output logging.
-wrapper.logfile=wrapper.log
+# You may wish to change this on linux so the log is
+# preserved across OS restarts.
+# If you do change it, add the following line above to
+# tell the router where to find the wrapper log
+# (change X to the next available number)
+# wrapper.java.additional.X=-Dwrapper.logfile=/path/to/wrapper.log
+wrapper.logfile=$SYSTEM_java_io_tmpdir/wrapper.log
 
 # Format of output for the log file.  (See docs for formats)
 wrapper.logfile.format=LPTM
