* i2psnark build:       - Move FetchAndAdd to static inner class       - Remove duplicate classes from i2psnark.war (120KB);         fixes sporadic FetchAndAdd IllegalAccessError       - Fix standalone build to include i2psnark.jar since classes         aren't in the .war anymore       - Have standalone jetty use I2PAppContext temp directory       - Replace launch-i2psnark.jar with launch-i2psnark script,         since RunStandalone is in i2p.jar       - Clean up jetty-i2psnark.xml, turn off jetty logging       - Remove standalone build from the pkg target in the main build.xml
Monotone-Parent: 0dc8693b99a852b0183ffc6cd06804878f37ec89
Monotone-Revision: 927733f22869b8efc0640b40ec2c91a5d8680585

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-15T15:22:51

--- a/build.xml
+++ b/build.xml
@@ -39,7 +39,10 @@
     </target>
     <target name="build" depends="build2">
         <!-- so we don't build standalone for the updater -->
+        <!-- This builds apps/i2psnark/java/i2psnark-standalone.zip,
+          -   which we don't distribute anywhere...
         <ant dir="apps/i2psnark/java/" target="standalone" />
+        -->
     </target>
     <target name="build2" depends="builddep, jar, buildWEB" />
     <target name="buildSmall" depends="builddepSmall, jarSmall, buildWEB" />
@@ -240,7 +243,7 @@
         <copy file="build/susidns.war" todir="pkg-temp/webapps/" />
         <!-- <copy file="build/syndie.war" todir="pkg-temp/webapps/" /> -->
         <copy file="build/i2psnark.war" todir="pkg-temp/webapps/" />
-        <copy file="apps/i2psnark/java/build/launch-i2psnark.jar" todir="pkg-temp/" />
+        <copy file="apps/i2psnark/launch-i2psnark" todir="pkg-temp/" />
         <copy file="apps/i2psnark/jetty-i2psnark.xml" todir="pkg-temp/" />
         <copy file="apps/i2psnark/i2psnark.config" todir="pkg-temp/" />
         <copy file="installer/resources/blocklist.txt" todir="pkg-temp/" />
