* i2psnark build:       - Put the duplicate classes back in the war, because         the jar is not in the wrapper.config classpath in existing         installs. We could take them out of the jar, but then         they won't be available for standalone snark and future         updates via snark.       - Delete the dist/ dir in distclean
Monotone-Parent: bacf72f94f90086f3c6bd2a940dbf5e1de994307
Monotone-Revision: 5096c75d6d2d09c928a301fc90b8ea43a73e5750

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-15T21:27:38

--- a/apps/i2psnark/java/build.xml
+++ b/apps/i2psnark/java/build.xml
@@ -44,10 +44,16 @@
             </manifest>
         </jar>
     </target>    
-    <!-- only include the servlet, everything else is in the jar -->
+    <!-- Ideally we would include
+      -  only include the servlet, everything else is in the jar.
+      -  However, the wrapper.config classpath in existing installs
+      -  does not include i2psnark.jar.
+      -  So we must continue to duplicate everything in the war.
+          <classes dir="./build/obj" includes="**/I2PSnarkServlet*.class" />
+     -->
     <target name="war" depends="jar"> 
         <war destfile="../i2psnark.war" webxml="../web.xml">
-          <classes dir="./build/obj" includes="**/I2PSnarkServlet*.class" />
+          <classes dir="./build/obj" includes="**/*.class" excludes="**/RunStandalone.class" />
         </war>
     </target>
     
@@ -86,6 +92,7 @@
         <delete dir="./build" />
         <delete file="../i2psnark.war" />
         <delete file="./i2psnark-standalone.zip" />
+        <delete dir="./dist" />
     </target>
     <target name="cleandep" depends="clean">
         <ant dir="../../ministreaming/java/" target="distclean" />
