Fix wrapper.config issues on windows
Monotone-Parent: 5096c75d6d2d09c928a301fc90b8ea43a73e5750
Monotone-Revision: 68e09987c1ed4f8bf3dfa0a7421b89cf41947bd3

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-15T21:28:36

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -51,7 +51,8 @@ wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
 wrapper.java.additional.2=-Dorg.mortbay.http.Version.paranoid=true
 wrapper.java.additional.3=-Dorg.mortbay.util.FileResource.checkAliases=false
 wrapper.java.additional.4=-Dorg.mortbay.xml.XmlParser.NotValidating=true
-wrapper.java.additional.5=-Di2p.dir.base=$INSTALL_PATH
+wrapper.java.additional.5=-Di2p.dir.base="$INSTALL_PATH"
+wrapper.java.additional.5.stripquotes=TRUE
 # Uncomment this for better performance.
 # If it doesn't work, server mode is not available in your JVM.
 # This may not be required if your machine is already "server-class".
