* desktopgui:       - Added client and server tunnel view         (saving does not work yet)
Monotone-Parent: 6fddab77462a92759305edee8fe5a944d6865375
Monotone-Revision: 51b043fd6531665ecf71fd6c4bf16ab37930c2e2

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-06-17T21:54:29
Monotone-Branch: i2p.i2p

--- a/apps/desktopgui/build.xml
+++ b/apps/desktopgui/build.xml
@@ -77,11 +77,13 @@
     <property name="build_lib" location="lib"/>
     <property name="build_i2pref" location="../../build"/>
     <property name="build_routerconsole" location="../routerconsole/java/build/"/>
+    <property name="build_i2ptunnel" location="../i2ptunnel/java/build/"/>
 	
     <path id="build_classpath">
         <fileset dir="${build_lib}" includes="**/*.jar"/>
         <fileset dir="${build_i2pref}" includes="**/*.jar"/>
         <fileset dir="${build_routerconsole}" includes="**/*.jar"/>
+        <fileset dir="${build_i2ptunnel}" includes="**/*.jar"/>
     </path>
     <target name="build_init">
         <!-- Create the time stamp -->
