--- a/apps/desktopgui/nbproject/project.properties
+++ b/apps/desktopgui/nbproject/project.properties
@@ -22,6 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.appframework.jar=lib/appframework.jar
 file.reference.i2p.jar=../../core/java/build/i2p.jar
+file.reference.i2ptunnel.jar=../i2ptunnel/java/build/i2ptunnel.jar
 file.reference.router.jar=../../router/java/build/router.jar
 file.reference.routerconsole.jar=../routerconsole/java/build/routerconsole.jar
 file.reference.swing-worker.jar=lib/swing-worker.jar
@@ -32,7 +33,8 @@ javac.classpath=\
     ${file.reference.appframework.jar}:\
     ${file.reference.swing-worker.jar}:\
     ${file.reference.i2p.jar}:\
-    ${file.reference.routerconsole.jar}
+    ${file.reference.routerconsole.jar}:\
+    ${file.reference.i2ptunnel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
