--- a/apps/desktopgui/src/net/i2p/desktopgui/gui/resources/GeneralConfiguration.properties
+++ b/apps/desktopgui/src/net/i2p/desktopgui/gui/resources/GeneralConfiguration.properties
@@ -13,7 +13,7 @@ downloadspeed.text=jTextField2
 uploadgb.text=jTextField3
 downloadgb.text=jTextField4
 updateMethod.text=What is your preferred automatic update setting?
-updateInform.text=Only inform about updates
+updateInform.text=Only inform about updates (not advised)
 updateDownload.text=Download and verify update file, do not restart
 updateDownloadRestart.text=Download, verify and restart
 checkUpdates.text=Check for updates now
@@ -21,9 +21,17 @@ updateNow.text=Update available: update now
 advancedUpdateConfig.text=Advanced update configuration
 clientTunnelLabel.text=Client tunnels:
 serverTunnelLabel.text=Server tunnels:
-tunnelsExplanation.text=Tunnel explanation
+tunnelsExplanation.text=Click on a tunnel to view and change its configuration. + Tunnel explanation
 uploadUsageLabel.text=Monthly usage:
 downloadUsageLabel.text=Monthly usage:
 gbUploadLabel.text=GB
 gbDownloadLabel.text=GB
 uploadDownloadExplanation.text=Explanation ...
+clientTable.columnModel.title3=Status
+clientTable.columnModel.title2=Address
+clientTable.columnModel.title1=Type
+clientTable.columnModel.title0=Name
+serverTable.columnModel.title0=Name
+serverTable.columnModel.title3=Title 4
+serverTable.columnModel.title2=Status
+serverTable.columnModel.title1=Address
