Include console.css in new installs!
Monotone-Parent: 1502899cc2e939a3165c296d5eabad4ff0f8cde5
Monotone-Revision: 7d668acde68297c64338e243c31afa132d4c4e98

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-22T14:07:31

--- a/build.xml
+++ b/build.xml
@@ -297,6 +297,9 @@
         <copy todir="pkg-temp/docs/themes/" >
           <fileset dir="installer/resources/themes/" />
         </copy>
+        <!-- CSS now in docs/, not in the .war -->
+        <copy file="apps/routerconsole/jsp/default.css" tofile="pkg-temp/docs/themes/console/console.css" />
+        <copy file="apps/routerconsole/jsp/default.css" tofile="pkg-temp/docs/themes/console/defCon1/console.css" />
         <mkdir dir="pkg-temp/eepsite" />
         <mkdir dir="pkg-temp/eepsite/webapps" />
         <mkdir dir="pkg-temp/eepsite/logs" />
