* Console: Move favicon.ico and i2plogo.png out of the .war       so that the HTTP proxy can use them directly;       proxy error pages must be updated next
Monotone-Parent: 5745840bda7ae3e61ad6fdf03b7338d3e4288766
Monotone-Revision: 91f7c17a08ea873ff7bb40835a43ba857ee7fe46

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-28T12:50:33

--- a/build.xml
+++ b/build.xml
@@ -320,6 +320,13 @@
         <!-- CSS now in docs/, not in the .war -->
         <copy file="installer/resources/themes/console/console.css" todir="pkg-temp/docs/themes/console/" />
         <copy file="installer/resources/themes/console/defCon1/console.css" todir="pkg-temp/docs/themes/console/defCon1/" />
+        <!-- these files now in docs/, not in the .war -->
+        <copy file="installer/resources/themes/console/images/favicon.ico" todir="pkg-temp/docs/themes/console/images/" />
+        <copy file="installer/resources/themes/console/images/i2plogo.png" todir="pkg-temp/docs/themes/console/images/" />
+        <!-- Since the logo moved, we have to update the error pages -->
+        <copy todir="pkg-temp/docs/" >
+          <fileset dir="installer/resources/" includes="*-header.ht" />
+        </copy>
         <!-- make a "classic" theme -->
         <copy todir="pkg-temp/docs/themes/console/classic/" >
             <fileset  dir="installer/resources/themes/console/classic/" />
