add readme files to the updater
Monotone-Parent: 578ae6a25c962984b8addd62f47570365dd04034
Monotone-Revision: 7069e4dcedf5578597d00177dd220e02ded3634e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-13T03:04:17
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -341,6 +341,9 @@
         <copy todir="pkg-temp/docs/themes/console/light/" >
             <fileset  dir="installer/resources/themes/console/light/" />
         </copy>
+        <copy todir="pkg-temp/docs/" >
+          <fileset dir="." includes="readme*.html" />
+        </copy>
     </target>
 
     <!-- this is no longer required, izpack 4.3.0 supports headless installs with java -jar i2pinstall.exe -console -->
