Reduce wrapper.restart.delay from 60 to 15 seconds.
Monotone-Parent: b26757ecede23b340df2e50e3a5f46df818471cb
Monotone-Revision: aa49c7a0dcd4b14af85c26c541f27940e09cd1d8

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-16T20:15:00
Monotone-Branch: i2p.i2p

--- a/installer/resources/wrapper.config
+++ b/installer/resources/wrapper.config
@@ -134,7 +134,8 @@ wrapper.on_exit.5=RESTART
 wrapper.jvm_exit.timeout=30
 
 # give the OS 60s to clear all the old sockets / etc before restarting
-wrapper.restart.delay=60
+# Let's change the default from 60 to 15 seconds and see if anyone moans..
+wrapper.restart.delay=15
 
 wrapper.ping.interval=600
 wrapper.ping.timeout=605
