* Console: Drop top-level css, unused now     * Eepsite: Add default robots.txt (thanks v1v4)
Monotone-Parent: 62af95470629ffcc0277c5a0b863bc069478af12
Monotone-Revision: 9702cd77fbf4bec12d3f177bc6d58a0065c898c3

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-07-21T15:46:47
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -305,6 +305,7 @@
         <mkdir dir="pkg-temp/eepsite/docroot" />
         <mkdir dir="pkg-temp/eepsite/cgi-bin" />
         <copy file="installer/resources/eepsite_index.html" tofile="pkg-temp/eepsite/docroot/index.html" />
+        <copy file="installer/resources/robots.txt" todir="pkg-temp/eepsite/docroot/" />
         <copy file="installer/resources/themes/console/images/favicon.ico" tofile="pkg-temp/eepsite/docroot/favicon.ico" />
         <copy file="installer/resources/jetty.xml" tofile="pkg-temp/eepsite/jetty.xml" />
     </target>
@@ -319,8 +320,7 @@
         <copy file="installer/lib/launch4j/lib/XStream.LICENSE.txt" tofile="pkg-temp/licenses/LICENSE-XStream.txt" />
     </target>
     <target name="prepthemeupdates">
-        <!-- CSS now in docs/, not in the .war -->
-        <copy file="installer/resources/themes/console/console.css" todir="pkg-temp/docs/themes/console/" />
+        <!-- CSS now in docs/, not in the .war; just in case anybody is using defCon1 -->
         <copy file="installer/resources/themes/console/defCon1/console.css" todir="pkg-temp/docs/themes/console/defCon1/" />
         <!-- these files now in docs/, not in the .war -->
         <copy file="installer/resources/themes/console/images/favicon.ico" todir="pkg-temp/docs/themes/console/images/" />
