--- a/build.xml
+++ b/build.xml
@@ -322,6 +322,8 @@
     <target name="prepthemeupdates">
         <!-- CSS now in docs/, not in the .war; just in case anybody is using defCon1 -->
         <copy file="installer/resources/themes/console/defCon1/console.css" todir="pkg-temp/docs/themes/console/defCon1/" />
+        <!-- Add extricated I2PSnark css here, for now -->
+        <copy file="installer/resources/themes/console/snark.css" todir="pkg-temp/docs/themes/console/" />
         <!-- these files now in docs/, not in the .war -->
         <copy file="installer/resources/themes/console/images/favicon.ico" todir="pkg-temp/docs/themes/console/images/" />
         <copy file="installer/resources/themes/console/images/i2plogo.png" todir="pkg-temp/docs/themes/console/images/" />
@@ -340,7 +342,7 @@
         <!-- Add light theme -->
         <copy todir="pkg-temp/docs/themes/console/light/" >
             <fileset  dir="installer/resources/themes/console/light/" />
-        </copy>
+        </copy> 
         <copy todir="pkg-temp/docs/" >
           <fileset dir="." includes="readme*.html" />
         </copy>
